--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "smart-palette",
+  "homepage": "https://jfrazier1519.github.io/smart-palette",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +8,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "clarifai": "^2.9.1",
+    "env-cmd": "^10.1.0",
+    "gh-pages": "^6.1.1",
     "particles-bg": "^2.5.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
