--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "smart-palette",
-  "homepage": "https://jfrazier1519.github.io/smart-palette",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,13 +14,12 @@
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.221",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.2",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build",
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
