--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "cd packages/react-scripts && node bin/react-scripts.js start",
+    "build": "cd packages/react-scripts && node bin/react-scripts.js build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
