--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
     "react-parallax-tilt": "^1.7.221",
     "serve": "^14.2.2",
     "tachyons": "^4.12.0",
-    "web-vitals": "^3.5.2"
-  },
-  "devDependencies": {
+    "web-vitals": "^3.5.2",
     "react-scripts": "5.0.1"
   },
+  "devDependencies": {},
   "scripts": {
-    "start": "cd packages/react-scripts && node bin/react-scripts.js start",
-    "build": "cd packages/react-scripts && node bin/react-scripts.js build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
